feat(ENG-158): archive counterparty
